fix get process id